Save cartpole example

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "python.analysis.extraPaths": ["./Bomberman"]
+  "python.analysis.extraPaths": ["./Bomberman"],
+  "cSpell.words": ["matplotlib"]
 }
